grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        $.newline,
        $.line_number_top_level_item,
        $.frm_version_statement,
        $.frm_begin_block,
        $.frm_begin_property_block,
        $.frm_property_statement,
        $.preprocessor_const,
        $.preprocessor_if,
        $.attribute_statement,
        $.option_statement,
        $.implements_statement,
        $.def_type_statement,
        $.type_declaration,
        $.enum_declaration,
        $.declare_sub_statement,
        $.declare_function_statement,
        $.conditional_sub_declaration,
        $.conditional_function_declaration,
        $.conditional_property_declaration,
        $.sub_declaration,
        $.function_declaration,
        $.property_get_declaration,
        $.property_let_declaration,
        $.property_set_declaration,
        $.event_declaration,
        $.const_declaration,
        $.variable_declaration,
      ),

    newline: (_) => /\r?\n/,

    _statement_separator: ($) => choice($.newline, ":"),

    line_continuation: (_) => token(seq("_", /[ \t]*\r?\n/)),

    attribute_statement: ($) =>
      seq(
        caseInsensitive("Attribute"),
        field("name", choice($.identifier, $.member_expression)),
        "=",
        field("value", $._literal),
      ),

    declare_function_statement: ($) =>
      prec.right(
        seq(
          optional(field("visibility", $.visibility)),
          caseInsensitive("Declare"),
          optional(field("ptrsafe_modifier", $.ptrsafe_modifier)),
          caseInsensitive("Function"),
          field("name", $.identifier),
          caseInsensitive("Lib"),
          field("library", $.string_literal),
          optional(seq(caseInsensitive("Alias"), field("alias", $.string_literal))),
          optional(field("parameters", $.parameter_list)),
          optional(field("type", $.as_type_clause)),
        ),
      ),

    sub_declaration: ($) =>
      seq(
        $._sub_header,
        $._statement_separator,
        field("body", optional($.block)),
        field("end", $.end_sub_statement),
      ),

    function_declaration: ($) =>
      seq(
        $._function_header,
        $._statement_separator,
        field("body", optional($.block)),
        field("end", $.end_function_statement),
      ),

    property_get_declaration: ($) =>
      seq(
        $._property_get_header,
        $._statement_separator,
        field("body", optional($.block)),
        field("end", $.end_property_statement),
      ),

    _sub_header: ($) =>
      seq(
        optional($._procedure_modifier),
        caseInsensitive("Sub"),
        field("name", $.identifier),
        optional(field("parameters", $.parameter_list)),
      ),

    _function_header: ($) =>
      seq(
        optional($._procedure_modifier),
        caseInsensitive("Function"),
        field("name", $.identifier),
        optional(field("parameters", $.parameter_list)),
        optional(field("type", $.as_type_clause)),
      ),

    _property_get_header: ($) =>
      seq(
        optional($._procedure_modifier),
        caseInsensitive("Property"),
        field("accessor", $.get_accessor),
        field("name", $.identifier),
        optional(field("parameters", $.parameter_list)),
        optional(field("type", $.as_type_clause)),
      ),

    end_sub_statement: ($) => seq(caseInsensitive("End"), caseInsensitive("Sub")),

    end_function_statement: ($) => seq(caseInsensitive("End"), caseInsensitive("Function")),

    end_property_statement: ($) => seq(caseInsensitive("End"), caseInsensitive("Property")),

    static_modifier: (_) => caseInsensitive("Static"),

    ptrsafe_modifier: (_) => caseInsensitive("PtrSafe"),

    byval_modifier: (_) => caseInsensitive("ByVal"),

    optional_modifier: (_) => caseInsensitive("Optional"),

    get_accessor: (_) => caseInsensitive("Get"),

    block: ($) => repeat1(choice($._statement_separator, $._statement)),

    _statement: ($) =>
      choice(
        $.single_line_if_statement,
        $.if_statement,
        $.select_statement,
        $.for_statement,
        $.for_each_statement,
        $.do_statement,
        $.while_statement,
        $.with_statement,
        $.on_goto_statement,
        $.on_error_statement,
        $.resume_statement,
        $.goto_statement,
        $.label_statement,
        $.line_number_statement,
        $.exit_statement,
        $.end_statement,
        $.redim_statement,
        $.erase_statement,
        $.open_statement,
        $.input_statement,
        $.line_input_statement,
        $.print_statement,
        $.debug_print_statement,
        $.close_statement,
        $.get_statement,
        $.put_statement,
        $.lock_statement,
        $.unlock_statement,
        $.seek_statement,
        $.reset_statement,
        $.raise_event_statement,
        $.name_statement,
        $.stop_statement,
        $.beep_statement,
        $.load_statement,
        $.unload_statement,
        $.preprocessor_const,
        $.preprocessor_if,
        $.def_type_statement,
        $.const_declaration,
        $.variable_declaration,
        $.set_statement,
        $.assignment_statement,
        $.call_statement,
        $.expression_statement,
      ),

    variable_declaration: ($) =>
      choice(
        seq(
          field("visibility", $.visibility),
          field("with_events_modifier", $.with_events_modifier),
          commaSep1($.variable_declarator),
        ),
        seq(
          choice(
            seq(
              optional(field("visibility", $.visibility)),
              choice(caseInsensitive("Dim"), field("static_modifier", $.static_modifier)),
            ),
            field("visibility", $.visibility),
          ),
          commaSep1($.variable_declarator),
        ),
      ),

    variable_declarator: ($) =>
      choice(
        prec.right(
          1,
          seq(
            field("name", $.identifier),
            field("bounds", $.array_bounds),
            optional(field("type", $.as_type_clause)),
            optional(field("initializer", $.initializer)),
          ),
        ),
        seq(
          field("name", $.identifier),
          optional(field("type", $.as_type_clause)),
          optional(field("initializer", $.initializer)),
        ),
      ),

    initializer: ($) => seq("=", field("value", choice($.comparison_expression, $._expression))),

    parameter_list: ($) => seq("(", optional(commaSep1($.parameter)), ")"),

    parameter: ($) =>
      seq(
        optional(field("optional_modifier", $.optional_modifier)),
        optional(field("passing_mode", choice($.byval_modifier, $.byref_modifier))),
        optional(field("paramarray_modifier", $.paramarray_modifier)),
        field("name", $.identifier),
        optional(field("bounds", $.array_bounds)),
        optional(field("type", $.as_type_clause)),
        optional(field("default_value", $.initializer)),
      ),

    as_type_clause: ($) =>
      prec.right(
        seq(
          caseInsensitive("As"),
          optional(caseInsensitive("New")),
          field("type", $.type_expression),
          optional($.fixed_string_length),
          optional($.array_bounds),
        ),
      ),

    array_bounds: ($) => seq("(", optional(commaSep1($.array_bound)), ")"),

    array_bound: ($) =>
      choice(
        seq(field("lower", $._expression), caseInsensitive("To"), field("upper", $._expression)),
        $._expression,
      ),

    type_expression: ($) =>
      prec(
        4,
        choice(
          $.dotted_type_expression,
          $.identifier,
          caseInsensitive("String"),
          caseInsensitive("Boolean"),
          caseInsensitive("Byte"),
          caseInsensitive("Integer"),
          caseInsensitive("Long"),
          caseInsensitive("LongLong"),
          caseInsensitive("LongPtr"),
          caseInsensitive("Single"),
          caseInsensitive("Double"),
          caseInsensitive("Currency"),
          caseInsensitive("Date"),
          caseInsensitive("Variant"),
          caseInsensitive("Object"),
        ),
      ),

    visibility: (_) =>
      choice(caseInsensitive("Public"), caseInsensitive("Private"), caseInsensitive("Friend")),

    select_statement: ($) =>
      seq(
        optional(field("start_line", $.line_number_prefix)),
        caseInsensitive("Select"),
        caseInsensitive("Case"),
        field("value", $._expression),
        $.newline,
        repeat(choice($.newline, $.case_clause)),
        optional(field("end_line", $.line_number_prefix)),
        caseInsensitive("End"),
        caseInsensitive("Select"),
      ),

    case_clause: ($) =>
      seq(
        optional(field("line", $.line_number_prefix)),
        caseInsensitive("Case"),
        choice(caseInsensitive("Else"), commaSep1($.case_expression)),
        $._statement_separator,
        field("body", optional($.block)),
      ),

    case_expression: ($) =>
      choice(
        seq(caseInsensitive("Is"), choice("<", "<=", ">", ">=", "=", "<>"), $._expression),
        seq($._expression, caseInsensitive("To"), $._expression),
        $._expression,
      ),

    for_statement: ($) =>
      prec.right(
        choice(
          seq(
            $._for_header,
            $.newline,
            field("body", choice($.for_statement, $.for_each_statement)),
          ),
          seq(
            $._for_header,
            field("body", $.shared_next_for_body),
          ),
          seq(
            $._for_header,
            $.newline,
            field("body", optional($.block)),
            optional(field("end_line", $.line_number_prefix)),
            caseInsensitive("Next"),
            optional(field("next_variables", $.next_variable_list)),
          ),
          seq(
            $._for_header,
            field("body", optional($.single_line_block)),
            optional(field("end_line", $.line_number_prefix)),
            ":",
            caseInsensitive("Next"),
            optional(field("next_variables", $.next_variable_list)),
          ),
        ),
      ),

    _for_header: ($) =>
      seq(
        optional(field("start_line", $.line_number_prefix)),
        caseInsensitive("For"),
        field("variable", $.identifier),
        "=",
        field("start", $._expression),
        caseInsensitive("To"),
        field("end", $._expression),
        optional(seq(caseInsensitive("Step"), field("step", $._expression))),
      ),

    with_statement: ($) =>
      choice(
        seq(
          optional(field("start_line", $.line_number_prefix)),
          caseInsensitive("With"),
          field("value", $._expression),
          $.newline,
          field("body", optional($.block)),
          optional(field("end_line", $.line_number_prefix)),
          caseInsensitive("End"),
          caseInsensitive("With"),
        ),
        seq(
          optional(field("start_line", $.line_number_prefix)),
          caseInsensitive("With"),
          field("value", $._expression),
          field("body", optional($.single_line_block)),
          optional(field("end_line", $.line_number_prefix)),
          ":",
          caseInsensitive("End"),
          caseInsensitive("With"),
        ),
      ),

    next_variable_list: ($) => commaSep1($.identifier),

    redim_statement: ($) =>
      seq(
        caseInsensitive("ReDim"),
        optional(caseInsensitive("Preserve")),
        commaSep1($.redim_declarator),
      ),

    redim_declarator: ($) =>
      prec(4, seq(field("name", choice($.identifier, $.member_expression)), $.array_bounds)),

    file_number: ($) => prec(1, choice($.file_number_literal, $._expression)),

    get_statement: ($) =>
      seq(
        caseInsensitive("Get"),
        field("number", $.file_number),
        optional(
          seq(
            ",",
            optional(field("record", $._expression)),
            ",",
            field("target", $._assignable_expression),
          ),
        ),
      ),

    put_statement: ($) =>
      seq(
        caseInsensitive("Put"),
        field("number", $.file_number),
        optional(
          seq(",", optional(field("record", $._expression)), ",", field("source", $._expression)),
        ),
      ),

    lock_statement: ($) =>
      seq(
        caseInsensitive("Lock"),
        field("number", $.file_number),
        optional(seq(",", field("range", $.file_record_range))),
      ),

    unlock_statement: ($) =>
      seq(
        caseInsensitive("Unlock"),
        field("number", $.file_number),
        optional(seq(",", field("range", $.file_record_range))),
      ),

    file_record_range: ($) =>
      seq(
        field("start", $._expression),
        optional(seq(caseInsensitive("To"), field("end", $._expression))),
      ),

    seek_statement: ($) =>
      seq(
        caseInsensitive("Seek"),
        field("number", $.file_number),
        ",",
        field("position", $._expression),
      ),

    reset_statement: (_) => caseInsensitive("Reset"),

    raise_event_statement: ($) =>
      prec.right(
        seq(caseInsensitive("RaiseEvent"), field("event", $.identifier), optional($.argument_list)),
      ),

    name_statement: ($) =>
      prec(
        1,
        seq(
          caseInsensitive("Name"),
          field("old_path", $._expression),
          caseInsensitive("As"),
          field("new_path", $._expression),
        ),
      ),

    stop_statement: (_) => caseInsensitive("Stop"),

    beep_statement: (_) => caseInsensitive("Beep"),

    load_statement: ($) => seq(caseInsensitive("Load"), field("target", $._assignable_expression)),

    unload_statement: ($) =>
      seq(caseInsensitive("Unload"), field("target", $._assignable_expression)),

    def_type_statement: ($) =>
      seq(
        field(
          "kind",
          choice(
            caseInsensitive("DefBool"),
            caseInsensitive("DefByte"),
            caseInsensitive("DefCur"),
            caseInsensitive("DefDate"),
            caseInsensitive("DefDbl"),
            caseInsensitive("DefDec"),
            caseInsensitive("DefInt"),
            caseInsensitive("DefLng"),
            caseInsensitive("DefLngLng"),
            caseInsensitive("DefLngPtr"),
            caseInsensitive("DefObj"),
            caseInsensitive("DefSng"),
            caseInsensitive("DefStr"),
            caseInsensitive("DefVar"),
          ),
        ),
        commaSep1($.letter_range),
      ),

    letter_range: ($) =>
      prec.right(seq(field("start", $.identifier), optional(seq("-", field("end", $.identifier))))),

    set_statement: ($) =>
      seq(
        caseInsensitive("Set"),
        field("left", $._assignable_expression),
        "=",
        field("right", choice($.comparison_expression, $._expression)),
      ),

    assignment_statement: ($) =>
      seq(
        field("left", $._assignable_expression),
        "=",
        field("right", choice($.logical_value_expression, $.comparison_expression, $._expression)),
      ),

    coordinate_pair: ($) =>
      prec(
        2,
        seq(
          "(",
          field("x", choice($.comparison_expression, $._expression)),
          ",",
          field("y", choice($.comparison_expression, $._expression)),
          ")",
        ),
      ),

    argument_list: ($) => seq("(", optional($._argument_sequence), ")"),

    unparenthesized_argument_list: ($) => $._unparenthesized_argument_sequence,

    line_range_argument_list: ($) =>
      seq(
        optional(caseInsensitive("Step")),
        field("start", $.coordinate_pair),
        optional(caseInsensitive("Step")),
        "-",
        field("end", $.coordinate_pair),
        optional(seq(",", $.print_argument_sequence)),
      ),

    _argument_sequence: ($) =>
      choice(
        prec(1, commaSep1($._argument)),
        prec.right(seq(optional($._argument), repeat1(seq(",", optional($._argument))))),
      ),

    nothing_literal: (_) => caseInsensitive("Nothing"),
