test/corpus/access_statements.txt
==================
debug print semicolon arguments
==================

Sub Test()
    Debug.Print latitude; longitude; radius
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (call_statement
        (qualified_member_expression
          (identifier)
          (identifier))
        (unparenthesized_argument_list
          (identifier)
          (identifier)
          (identifier)))
      (newline))
    (end_sub_statement))
  (newline))

==================
access report line
==================

Sub Test()
    Me.Line ((0), .Section(acHeader).Height) _
        -(0, .ScaleHeight - (.Section(acFooter).Height))
End Sub

---

(source_file
  (newline)
  (sub_declaration
    (identifier)
    (parameter_list)
    (newline)
    (block
      (call_statement
        (qualified_member_expression
          (identifier)
          (identifier))
        (line_range_argument_list
          (coordinate_pair
            (parenthesized_expression
              (number_literal))
            (qualified_member_expression
              (call_expression
                (implicit_member_expression
                  (identifier))
                (argument_list
                  (identifier)))
              (identifier)))
          (line_continuation)
          (coordinate_pair
            (number_literal)
            (binary_expression
              (implicit_member_expression
                (identifier))
              (parenthesized_expression
                (qualified_member_expression
                  (call_expression
                    (implicit_member_expression
                      (identifier))
                    (argument_list
                      (identifier)))
                  (identifier)))))))
      (newline))
    (end_sub_statement))
  (newline))
