test/corpus/attributes.txt
==================
attribute vb name
==================

Attribute VB_Name = "Module1"

---

(source_file
  (newline)
  (attribute_statement
    name: (identifier)
    value: (string_literal))
  (newline))

==================
multiple attributes
==================

Attribute VB_Name = "Class1"
Attribute VB_GlobalNameSpace = False
Attribute VB_PredeclaredId = True

---

(source_file
  (newline)
  (attribute_statement
    name: (identifier)
    value: (string_literal))
  (newline)
  (attribute_statement
    name: (identifier)
    value: (boolean_literal))
  (newline)
  (attribute_statement
    name: (identifier)
    value: (boolean_literal))
  (newline))

==================
procedure attribute with a keyword-named procedure
==================

Public Function Load() As String
Attribute Load.VB_Description = "Loads a document."
End Function

Public Property Get Name() As String
Attribute Name.VB_Description = "Returns a name."
End Property

---

(source_file
  (newline)
  (function_declaration
    visibility: (visibility)
    name: (identifier)
    parameters: (parameter_list)
    type: (as_type_clause
      type: (type_expression))
    (newline)
    (attribute_statement
      name: (qualified_member_expression
        receiver: (identifier)
        member: (identifier))
      value: (string_literal))
    (newline)
    end: (end_function_statement))
  (newline)
  (newline)
  (property_get_declaration
    visibility: (visibility)
    accessor: (get_accessor)
    name: (identifier)
    parameters: (parameter_list)
    type: (as_type_clause
      type: (type_expression))
    (newline)
    (attribute_statement
      name: (qualified_member_expression
        receiver: (identifier)
        member: (identifier))
      value: (string_literal))
    (newline)
    end: (end_property_statement))
  (newline))
